bk_ida/expected_expression/expected_expression/g3/search_root
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/search_root/src/search.c:1561:10: error: conflicting types for 'search_root'
move_s * search_root( move_s *retstr, int originalalpha, int originalbeta, int depth) 
         ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/search_root/src/protos.h:61:8: note: previous declaration is here
move_s search_root (int alpha, int beta, int depth);
       ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/search_root/src/search.c:1820:12: error: expected expression
*( _OWORD *)&v91.captured = *( _OWORD *)( v19 - 1535); 
           ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/search_root/src/search.c:1820:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v91.captured = *( _OWORD *)( v19 - 1535); 
   ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/search_root/src/search.c:1820:40: error: expected expression
*( _OWORD *)&v91.captured = *( _OWORD *)( v19 - 1535); 
                                       ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/search_root/src/search.c:1820:32: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v91.captured = *( _OWORD *)( v19 - 1535); 
                               ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/search_root/src/search.c:1823:14: error: passing 'char [20]' to parameter of incompatible type 'move_s'
comp_to_san( searching_move, v91); 
             ^~~~~~~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/search_root/src/protos.h:119:26: note: passing argument to parameter 'move' here
void comp_to_san (move_s move, char str[]);
                         ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/search_root/src/search.c:1871:16: error: read-only variable is not assignable
v80[450 * v72] = v79; 
~~~~~~~~~~~~~~ ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/search_root/src/search.c:1872:19: error: member reference base type 'const __m128i' (vector of 2 'long long' values) is not a structure or union
v80[450 * v72 + 1].m128i_i64[0] = v77[-1].m128i_i64[1]; 
~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/search_root/src/search.c:1872:42: error: member reference base type 'const __m128i' (vector of 2 'long long' values) is not a structure or union
v80[450 * v72 + 1].m128i_i64[0] = v77[-1].m128i_i64[1]; 
                                  ~~~~~~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/search_root/src/search.c:2074:16: error: read-only variable is not assignable
v90[450 * v83] = v89; 
~~~~~~~~~~~~~~ ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/search_root/src/search.c:2075:19: error: member reference base type 'const __m128i' (vector of 2 'long long' values) is not a structure or union
v90[450 * v83 + 1].m128i_i64[0] = v87[-1].m128i_i64[1]; 
~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/search_root/src/search.c:2075:42: error: member reference base type 'const __m128i' (vector of 2 'long long' values) is not a structure or union
v90[450 * v83 + 1].m128i_i64[0] = v87[-1].m128i_i64[1]; 
                                  ~~~~~~~^~~~~~~~~~
12 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/search_root/src/obj/search.o] Error 1
